manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contoso-air
  labels:
    app: contoso-air
    kubernetes.azure.com/generator: devhub
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contoso-air
  template:
    metadata:
      labels:
        app: contoso-air
    spec:
      containers:
        - name: contoso-air
          image: acrkubecon1009.azurecr.io/contoso-air:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
