manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoso-air
  namespace: namespace-workflow-1727903052737
  labels:
    kubernetes.azure.com/generator: devhub
spec:
  type: LoadBalancer
  selector:
    app: contoso-air
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
