manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-managed: "true" 
    kubernetes.azure.com/tls-cert-keyvault-uri: "https://kv-ignitedlab58.vault.azure.net/certificates/wildcard"
  name: "contoso-air-ingress"
  namespace: "demo"
  labels:
    app.kubernetes.io/name: contoso-air-ingress
    app.kubernetes.io/part-of: contoso-air-project
    kubernetes.azure.com/generator: draft
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: "flights.aks.rocks"
      http:
        paths:
          - backend:
              service:
                name: "contoso-air"
                port:
                  number: 3000
            path: "/"
            pathType: Prefix
  tls:
    - hosts:
        - "flights.aks.rocks"
      secretName: "keyvault-contoso-air-ingress"
